<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="welcome">Welcome to the app! </string>
    <string name="splash">SplashScreen</string>
    <string name="app_name">HealthBuddy</string>

    <string name="menu">Menu</string>
    <string name="user_profile">Profile</string>
    <string name="exercise_menu">Exercise</string>
    <string name="nutrition_menu">Food and Drinks</string>
    <string name="chart_menu">Charts</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    
    <string name="message">Message Area: The system has recorded more activity...</string>
	<string name="calorie_bank_offSet">Todays Calorie Offset</string> 
	<string name="balanced_diet_calorie_heading">Balanced Daily Calorie Total</string> 
	<string name="calorie_bank_consummed">Predicted Calories Consumed for Today</string> 
	<string name="calorie_bank_burnt">Predicted Calories Burnt for Today</string> 
	
	<string name="advice"> Nutritional Advice</string>

    <string name="exercise_db">Search the Database</string>
    <string name="record_routes">Record your Routes</string>
    <string name="gym_locator">Gym Locator</string>
    <string name="exercise_routine">Add a new Routine</string>       

    <string name="exercise_db_result">This interface has a search box\/drop down list and an area to list the selections</string>
    <string name="add_exercise">Add Item</string> 
    <string name="record_routes_result">Here start the GPS button and display a map of the route</string>
    <string name="locator_result">This interface has a search box for name\/address, and displays a map</string>

    <string name="scan">Scan the Barcode</string>        
    <string name="recipe_finder">Recipe Central</string>        
    <string name="shopping_list">Create a Shopping List</string>        
    <string name="restaurant_locator">Restaurant Finder</string>              
        
    <string name="scan_result">This interface has a search box for name\/address, and displays a map</string>        
    <string name="recipe_finder_result">This interface has a list of recipes</string>        
    <string name="shopping_list_result">This interface has a list of items to buy</string>        

    <string name="exercise_chart">Recommended Consumption versus Your Consumption </string>
    <string name="nutrition_chart">Recommended Consumption versus Your Consumption</string>     
    <string name="health_chart">Caloriee Consumed Versus Calories burnt</string>  
    <string name="exercise_chart_result">A chart of fitness stats will go here</string>
    <string name="nutrition_chart_result">A chart of nutrition stats will go here</string>     
    <string name="health_chart_result">A chart of combined nutrition and fitness stats will go here</string>        
        
    <string name="calendar_day_view">Today</string>
	<string name="no_entry">No Entry</string>
    <string name="calendar_week_view">Week</string>
    <string name="calendar_month_view">Month</string>   
    
    <string name="no_notes">No Notes Yet</string>
    <string name="select_one">Select One</string>     
    <string name="refine_button">Refine</string>     
        
        
    <string-array name="duration_array">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
    </string-array>    
    
	<string-array name="day_array">
        <item>Today Only</item>
        <item>Everyday</item>
        <item>Weekdays</item>
        <item>Weekends</item>
     	<item>Mondays</item>
        <item>Tuesdays</item>
        <item>Wednesdays</item>
        <item>Thursdays</item>
        <item>Fridays</item>
        <item>Saturdays</item>
        <item>Sundays</item>
    </string-array>
    
    <string-array name="meal_array">
        <item>All foods</item>
        <item>Main Meals</item>
        <item>Fruit and Veg</item>
        <item>Snacks</item>
        <item>Takeaway</item>
        <item>Fish</item>
        <item>Grain</item>
        <item>Dinner</item>
        <item>Chocolate</item>
        <item>Drinks</item>
        <item>Coffee</item>
        <item>Sushi</item>
        <item>Subway</item>
        <item>Eggs</item>
        <item>Mixed</item>
    </string-array>
    <string-array name="portion_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    

    
	<string name="add_values">Add values to the chart</string>    
	<string name="x">X</string>    
	<string name="y">Y</string>
	<string name="add">Add</string>
	<string name="new_series">New series</string>

    <string name="sensitivity">Sensitivity\n(lower = more sensitive)</string>   
        
        
        
        
        

</resources>