<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nutrition_menu" 
    />
    
    <Button 
        android:id="@+id/searchDB_button" 
        android:text="@string/exercise_db"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
    />    

    <Button 
        android:id="@+id/scan_button" 
        android:text="@string/scan"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
    />

    <Button 
        android:id="@+id/recipe_button" 
        android:text="@string/recipe_finder"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
    />    

    <Button 
        android:id="@+id/shopping_button" 
        android:text="@string/shopping_list"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
    />
    
    <Button 
        android:id="@+id/locator_button" 
        android:text="@string/restaurant_locator"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
    />
    
    <Button 
        android:id="@+id/menu_button" 
        android:text="@string/menu"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
    	/>
    

</LinearLayout>