<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
    
    <TextView
        android:text="@string/calendar" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    />        

    <Button
        android:id="@+id/day_view_button"
        android:text="@string/calendar_day_view" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
    />

    <Button
        android:id="@+id/week_view_button"
        android:text="@string/calendar_week_view" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
    />

    <Button 
        android:id="@+id/month_view_button" 
        android:text="@string/calendar_month_view"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
    />    
    
</LinearLayout>