<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    	  
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan" 
    />

    <Button 
        android:id="@+id/add_exercise_button" 
        android:text="@string/add_exercise"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
    	/>
       
    <Button 
        android:id="@+id/menu_button" 
        android:text="@string/menu"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
    	/>
    
</LinearLayout>